Bc 12/sign up confirm (#4)
* sign up confirm

* update status

* add current user, auth jwt

* other

* other

* corrected

* corrected
